# Ttlg_bot_learning

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  Tutor_db.session.sql  docker-compose.ghcr.yml  docker-compose.yml  local.db  local_test.db  make-help.cmd  pnpm-lock.yaml  pyproject.toml  skills-lock.json
.cursor/agents/: docs-updater.md
.github/workflows/: docker-publish.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  5dcbe7dd0861_schema_review_fixes.py  a3f8c91d2b04_user_profile_lesson_duration.py  b8c9d0e1f2a3_seed_mock_data.py  c7f8a2b1d4e5_frontend_iteration1_schema.py  c9d0e1f2a3b4_seed_teacher_vladimir.py  e1f2a3b4c5d6_seed_student_web_password.py  f8a9b0c1d2e3_merge_seed_teacher_vladimir.py
backend/scripts/: seed.py
backend/src/ttlg_backend/: __init__.py  config.py  db.py  dependencies.py  logging.py  main.py
backend/src/ttlg_backend/api/: assignments.py  auth.py  deps.py  dialogue.py  errors.py  lessons.py  settings.py  student_schedule.py  students.py  teacher.py  users.py
backend/src/ttlg_backend/llm/: __init__.py  client.py  errors.py  prompt.py
backend/src/ttlg_backend/services/: __init__.py  auth_service.py  dialogue_service.py
backend/src/ttlg_backend/storage/: __init__.py  models.py
backend/src/ttlg_backend/storage/repositories/: __init__.py  assignments.py  dialogues.py  lessons.py  progress_summary.py  settings_repo.py  teacher_repo.py  users.py
backend/tests/: conftest.py  test_auth_and_teacher.py  test_crud_smoke.py  test_dialogue.py  test_dialogue_llm_error.py  test_health.py  test_llm_client.py
devops/: README.md
devops/backend/: .dockerignore  Dockerfile
devops/bot/: .dockerignore  Dockerfile
devops/frontend/: .dockerignore  Dockerfile
docs/: api-conventions.md  architecture.md  contributing.md  data-model.md  doc-audit.md  how-to-docker.md  how-to-get-tokens.md  idea.md  integrations.md  onboarding.md  openapi.json  plan.md  vision.md
docs/adr/: README.md  adr-001-database.md  adr-002-orm-migrations-tests.md  adr-003-quality-tooling.md  adr-004-backend-stack.md  adr-005-devops-artifacts-layout.md
docs/agents/: docs-updater.md
docs/spec/: frontend-requirements.md
docs/tasks/: tasklist-backend-iteration-2-core.md  tasklist-backend-iteration-4-schedule-hw.md  tasklist-backend-iteration-6-progress.md  tasklist-backend.md  tasklist-bot-iteration-1-basic-bot.md  tasklist-bot-iteration-3-personalized-dialog.md  tasklist-database.md  tasklist-devops.md  tasklist-frontend-iteration-5-web.md  tasklist-frontend.md
docs/tech/: api-contracts.md  db-guide.md  docker-review-notes.md  user-scenarios.md
docs/templates/: tasklist.md
frontend/: .env.local.example  AGENTS.md  README.md  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/src/: middleware.ts  proxy.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/components/: bot-requests-feed.tsx  header.tsx  (+23 more)
scripts/: make_help.py  stack_health.py
src/ttlg_bot/: __init__.py  __main__.py  bot.py  config.py
tests/: conftest.py  test_backend_client_integration.py
(+206 files in other folders)
