[project]
name = "ttlg-bot"
version = "0.1.0"
description = "Telegram-бот с LLM для поддержки учёбы (MVP)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13.0",
    "openai>=1.50.0",
    "pydantic-settings>=2.5.0",
    # backend (см. docs/vision.md, ADR-001/002); пакет backend/src появится в задаче 06
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
