[project]
name = "ttlg-bot"
version = "0.1.0"
description = "Telegram-бот-клиент backend для поддержки учёбы (MVP)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.5.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.workspace]
members = [".", "backend"]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.8",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "backend/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"backend/alembic/**/*.py" = ["E501", "E402"]
