[project]
name = "ttlg-backend"
version = "0.1.0"
description = "Backend ядро TTLG (FastAPI, PostgreSQL, LLM)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.5.0",
    "email-validator>=2.0.0",
    "openai>=1.50.0",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=5.0.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "respx>=0.22.0",
]
